fixed display issues on mobile devices

--- a/expense-authorization/src/UI/angular-eteam/src/app/resource-request/resource-request.component.scss
+++ b/expense-authorization/src/UI/angular-eteam/src/app/resource-request/resource-request.component.scss
@@ -6,3 +6,6 @@ form {
     padding-left: 3px;
     padding-right: 20px;
 }
+input[type=radio], input[type=checkbox] {
+    margin-left: 0px;    
+}
